infra/k8s/webhook-local.yaml
apiVersion: admissionregistration.k8s.io/v1
kind: ValidatingWebhookConfiguration
metadata:
  name: healpolicy-validator
webhooks:
  - name: validate.healpolicy.healmesh.io
    rules:
      - apiGroups: ["healmesh.io"]
        apiVersions: ["v1alpha1"]
        operations: ["CREATE", "UPDATE"]
        resources: ["healpolicies"]
        scope: "Namespaced"
    clientConfig:
      url: "https://host.docker.internal:8443/validate-healpolicy"
      caBundle: LS0tLS1CRUdJTiBDRVJUSUZJQ0FURS0tLS0tCk1JSURRRENDQWlpZ0F3SUJBZ0lVTnVMVlVkc3JCNVYrMVorWW84R0E5ZHFnYytNd0RRWUpLb1pJaHZjTkFRRUwKQlFBd0h6RWRNQnNHQTFVRUF3d1VhRzl6ZEM1a2IyTnJaWEl1YVc1MFpYSnVZV3d3SGhjTk1qWXdOekUwTVRrdwpPVEl6V2hjTk1qY3dOekUwTVRrd09USXpXakFmTVIwd0d3WURWUVFEREJSb2IzTjBMbVJ2WTJ0bGNpNXBiblJsCmNtNWhiRENDQVNJd0RRWUpLb1pJaHZjTkFRRUJCUUFEZ2dFUEFEQ0NBUW9DZ2dFQkFQTGV4UDFseUdUY28xY1IKUUNUUU82WCtnZHcwRmt4VUZFcGFsb2JTeVQwSzNXTGM4Q2FNaVFqWHVlVkk1YUVNL0VGa3pjNnpTZGNnWFZkUAp5TUlRaEFXckZ1 [...]
    admissionReviewVersions: ["v1"]
    sideEffects: None
    timeoutSeconds: 5
    failurePolicy: Fail
